--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "dingo/api": "2.0.0-alpha1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -33,7 +34,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Enum\\":"app/Common/Enum/",
+            "Helper\\":"app/Common/Helper/"
         },
         "classmap": [
             "database/seeds",
