1.格式化响应

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:XAELyNhlRvBdwsgKWl3hsLnLvr4wmvf6AUItwxD304M=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -14,7 +14,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=dummy
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -37,3 +37,15 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# dingo配置
+API_STANDARDS_TREE=vnd
+API_SUBTYPE= # 子类型，a short name of your application or project, all lowercase
+#API_PREFIX=api # 前缀
+API_DOMAIN=api.teamblog.me # 子域名  （前缀和子域名只能存在一个）可选
+API_VERSION=v1 # 默认版本，用于回退
+API_NAME="TeamBlog API" # 名字（使用API Blueprint命令才会用到）
+#API_CONDITIONAL_REQUEST=false # 带条件的请求,默认开启。it will utilize the clients caching capabilities when possible to cache API requests
+API_STRICT=false # Strict模式，开启strict模式后将不能通过web浏览器正常访问api
+API_DEFAULT_FORMAT=json # 响应格式
+API_DEBUG=true # 调试模式
