--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "barryvdh/laravel-ide-helper": "^2.5",
         "darkaonline/l5-swagger": "^5.7",
         "dingo/api": "2.0.0-alpha1",
