--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "zircote/swagger-php": "~2.0"
     },
